RESOLVED FIXED 205306
ANGLE: Fix last WebGL conformance regressions
https://bugs.webkit.org/show_bug.cgi?id=205306
Summary ANGLE: Fix last WebGL conformance regressions
James Darpinian
Reported 2019-12-16 15:16:06 PST
ANGLE: Fix last WebGL conformance regressions
Attachments
ANGLE: Fix last WebGL conformance regressions (3.15 KB, patch)
2019-12-16 15:19 PST, James Darpinian
no flags
Fix missing Reviewed by line in ChangeLog (3.18 KB, patch)
2019-12-17 16:34 PST, James Darpinian
no flags
James Darpinian
Comment 1 2019-12-16 15:19:41 PST
Created attachment 385815 [details] ANGLE: Fix last WebGL conformance regressions
Kenneth Russell
Comment 2 2019-12-16 16:07:54 PST
Fantastic work James! Could you add a comment here with the names of the tests that are now fixed?
James Darpinian
Comment 3 2019-12-16 16:20:11 PST
non-ascii-comments.vert.html for the non-ascii comments fix. For the alpha:false antialias:true fix, I don't have a list of the fixed tests, it was a bunch of random ones that just happened to use that combination.
Justin Fan
Comment 4 2019-12-17 13:18:52 PST
r=me! I've pinged Dean since I'm not an official reviewer.
WebKit Commit Bot
Comment 5 2019-12-17 15:18:34 PST
Comment on attachment 385815 [details] ANGLE: Fix last WebGL conformance regressions Rejecting attachment 385815 [details] from commit-queue. Failed to run "['/Volumes/Data/EWS/WebKit/Tools/Scripts/webkit-patch', '--status-host=webkit-queues.webkit.org', '--bot-id=webkit-cq-03', 'validate-changelog', '--check-oops', '--non-interactive', 385815, '--port=mac']" exit_code: 1 cwd: /Volumes/Data/EWS/WebKit /Volumes/Data/EWS/WebKit/Source/WebCore/ChangeLog neither lists a valid reviewer nor contains the string "Unreviewed" or "Rubber stamp" (case insensitive). Full output: https://webkit-queues.webkit.org/results/13292616
James Darpinian
Comment 6 2019-12-17 16:34:30 PST
Created attachment 385928 [details] Fix missing Reviewed by line in ChangeLog
James Darpinian
Comment 7 2019-12-17 16:35:39 PST
Sorry, I accidentally removed the "Reviewed by" line in my changelog.
WebKit Commit Bot
Comment 8 2019-12-19 12:04:21 PST
Comment on attachment 385928 [details] Fix missing Reviewed by line in ChangeLog Clearing flags on attachment: 385928 Committed r253779: <https://trac.webkit.org/changeset/253779>
WebKit Commit Bot
Comment 9 2019-12-19 12:04:23 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 10 2019-12-19 12:05:49 PST
Note You need to log in before you can comment on or make changes to this bug.