ANGLE: Fix last WebGL conformance regressions https://bugs.webkit.org/show_bug.cgi?id=205306

Fixes the last few WebGL conformance regressions when enabling ANGLE on AMD GPUs on Mac.
The combination of alpha:false and antialias:true was broken, and validation of
non-ascii characters in comments was broken by a recent change to the test.

Patch by James Darpinian <jdarpinian@chromium.org> on 2019-12-19
Reviewed by Dean Jackson.

* html/canvas/WebGLRenderingContextBase.cpp:
(WebCore::WebGLRenderingContextBase::shaderSource):
* platform/graphics/angle/GraphicsContext3DANGLE.cpp:
(WebCore::GraphicsContext3D::reshapeFBOs):

Canonical link: https://commits.webkit.org/218663@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@253779 268f45cc-cd09-0410-ab3c-d52691b4dbfc